--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "chrome-finder": "^1.0.2",
     "chrome-remote-interface": "~0.24.2",
     "compression": "~1.7.1",
     "express": "~4.16.2",
